k8s/20-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk047-myservice-ingress
  namespace: class-2
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: public-nginx
  rules:
    - host: myservice.skala25a.project.skala-ai.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sk047-myservice-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sk047-myservice-frontend
                port:
                  number: 80
